--- a/tvm_func/Makefile
+++ b/tvm_func/Makefile
@@ -1,2 +1,4 @@
 all:
-	g++ test.cpp -fPIC -shared -o lib.so
+	g++ test.cpp -ldl -fPIC -shared -std=c++11 -o lib.so
+exe:
+	g++ test.cpp -ldl -std=c++11 -o out 
